Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63559

Regression: QCocoaBackingStore detaches and copies on paint.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.10.0 Beta 1
    • 5.10.0 Alpha
    • QPA
    • None
    • macOS

    Description

      Regression from 5.9.

      Set a breakpoint or add a qDebug() in QImage::copy(). Run attached program which repaints on mouse over. On 5.10 this will break or print in the QImage copy function. Resizing the window works as expected, with no copy.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            sorvig Morten Sørvig
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes